# comm-central

.hg/: dirstate  firefoxtrees  undo.desc
.hg/cache/: branch2-served.hidden  evoext-depthcache-00  evoext-firstmerge-00  evoext-obscache-00  evoext-stablesortcache-00  hgtagsfnodes1  rbc-revs-v1  tags2
.hg/store/: 00changelog.i  00manifest.i  fncache  undo
.hg/store/data/: _makefile.in.i  mots.yaml.i  moz.build.i  pyproject.toml.i  ~2ecron.yml.i  ~2eeslintrc.js.i  ~2egecko__rev.yml.i  ~2ehg-annotate-ignore-revs.i  ~2ehgtags.i  ~2eprettierignore.i  ~2ereadthedocs.yaml.i  ~2estylelintrc.js.i  ~2eycm__extra__conf.py.i
.hg/store/data/calendar/: ~2eeslintrc.js.i
.hg/store/data/chat/: _makefile.in.i  chat-prefs.js.i  makefiles.sh.i  moz.build.i  ~2eeslintrc.js.i
.hg/store/data/docs/: conf.py.i  index.rst.i  jsdoc.conf.js.i  mach__commands.py.i  requirements.in.i  requirements.txt.i
.hg/store/data/mail/: app-config.mk.i  confvars.sh.i  moz.build.i  moz.configure.i  ~2eeslintrc.js.i
.hg/store/data/mailnews/: _makefile.in.i  jar.mn.i  mailnews.js.i  moz.build.i
.hg/store/data/rust/: _cargo.lock.i  _cargo.toml.i  checksums.json.i
.hg/store/data/suite/: _makefile.in.i  app-config.mk.i  confvars.sh.i  moz.build.i  (+1 more)
mailnews/base/public/: nsIMessengerOSIntegration.idl
mailnews/base/src/: components.conf  moz.build  nsMessengerOSXIntegration.mm  nsMessengerUnixIntegration.h  nsMessengerWinIntegration.cpp
mailnews/protocols/: moz.build
rust/: Cargo.toml
rust/gkrust/src/: lib.rs
rust/linux_sys_tray/: Cargo.toml
rust/linux_sys_tray/src/: lib.rs  main.rs
(+5753 files in other folders)
